# DKTP

./: CMakeLists.txt  README.md
.github/: SECURITY.md
.github/workflows/: build.yml  codeql-analysis.yml
Source/: DKTP.sln
Source/DKTP/: DKTP.vcxproj  DKTP.vcxproj.filters  client.c  client.h  connections.c  connections.h  dktp.c  dktp.h  dktpcommon.h  doxymain.h  kex.c  kex.h  logger.c  logger.h  server.c  server.h
Source/Listener/: DKTP Listener.vcxproj  applnr.c  applnr.h
Source/Sender/: DKTP Sender.vcxproj  appsdr.c  appsdr.h
docs/: annotated.html  annotated_dup.js  applnr_8h_source.html  appsdr_8h_source.html  classes.html  client_8h.html  client_8h.js  client_8h_source.html  connections_8h.html  connections_8h.js  connections_8h_source.html  dir_31a48f9ee398560b50d95a71768a1c5d.html  dir_31a48f9ee398560b50d95a71768a1c5d.js  dir_763e01a53d144947453dd1efa7bf9c47.html  dir_763e01a53d144947453dd1efa7bf9c47.js  dir_b9edba6ce4064bbb490bb6c4b3b73d6f.html  dir_b9edba6ce4064bbb490bb6c4b3b73d6f.js  dktp_8h.html  dktp_8h.js  dktp_8h_source.html  dktpcommon_8h_source.html  doxygen_crawl.html  doxymain_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  index.js  kex_8h.html  kex_8h.js  kex_8h_source.html  logger_8h.html  logger_8h.js  logger_8h_source.html  (+22 more)
